--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -44,6 +44,7 @@
                 @if (Model.OrderType == OrderType.StandardOrderVisit)
                 {
                     <form id="visit-customisation-form" action="@Url.Action("Availability", "Home", new { orderType = @Model.OrderType.ToStringURL() })" method="POST">
+                        @Html.AntiForgeryToken()
                         <div class="col-md-4 col-sm-4">
                             <section id="room-selection">
                                 <fieldset>
@@ -56,7 +57,7 @@
 
                                     <div>
                                         <label for="map-and-lg-room">Map and large document reading room</label>
-                                        @Html.RadioButtonFor(Model => Model.RoomType, RoomType.MapAndLargeDocumentReadingRoom, new { id = "standard-room" })
+                                        @Html.RadioButtonFor(Model => Model.RoomType, RoomType.MapAndLargeDocumentReadingRoom, new { id = "map-and-lg-room" })
                                     </div>
                                 </fieldset>
                             </section>
@@ -68,19 +69,24 @@
                 <section id="date-selection">
                     <div class="col-md-8 col-sm-8">
                         <ul>
-                            @foreach (var item in Model.AvailableSeats)
+                            @for (var index = 0; index < Model.AvailableBookings.Count; index++)
                             {
                                 <li class="date">
-                                    <a href="@Url.Action("SecureBooking", "Booking", new { orderType = Model.OrderType.ToStringURL(), roomType = Model.RoomType.ToStringURL(), bookingDate = item.ToURLDate })">
-                                        <span class="col-md-6">@item.ToDate</span>
-                                        <span class="col-md-6">@item.AvailableSeats places available</span>
-                                    </a>
+                                    <form action="@Url.Action("SecureBooking", "Booking", new { orderType = @Model.OrderType.ToStringURL() })" method="POST">
+                                        @Html.AntiForgeryToken()
+                                        @Html.HiddenFor(Model => Model.RoomType)
+                                        @Html.Hidden("bookingDate", Model.AvailableBookings[index].Date)
+                                        <button class="button" type="submit">
+                                            <span class="col-md-6">@Model.AvailableBookings[index].ToDate</span>
+                                            <span class="col-md-6">@Model.AvailableBookings[index].AvailableSeats places available</span>
+                                        </button>
+                                    </form>
                                 </li>
                             }
                         </ul>
                     </div>
                 </section>
-                </div>
+            </div>
         </section>
     </section>
 </div>
