include AWS related settings

--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <form action="@Url.Action("DocumentOrder", "DocumentOrder", new { orderType = @Model.OrderType.ToStringURL(), bookingReference = @Guid.NewGuid().ToString() } )" method="POST">
-
+                        @Html.AntiForgeryToken()
                         @if (Model.OrderType == OrderType.StandardOrderVisit)
                         {
                             @await Html.PartialAsync("Partials/_StandardOrderForm")
