Refactor HTML & CSS

--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -13,7 +13,7 @@
 
         <section id="progress-bar">
             <div class="row">
-                <div class="text-center">
+                <div class="col-md-12">
                     <ol>
                         <li><span class="step-number">1</span> <span class="step">Select a date</span></li>
                         <li class="active"><span class="step-number">2</span> <span class="step">Enter your reader's ticket</span></li>
@@ -25,52 +25,73 @@
             </div>
         </section>
 
-        <div class="container-heading">
-            <h2>You are about to book the following space</h2>
-        </div>
-
-        <section class="prompt-grey">
+        <section class="heading">
             <div class="row">
-                <div class="booking-summary">
-                    <p>@(Model.OrderType == OrderType.StandardOrderVisit ? "Standard order" : "Bulk order") - @($"{Model.BookingDate:dddd dd MMMM}")</p>
+                <div class="col-md-12">
+                    <h2>You are about to book the following space</h2>
+                </div>
+            </div>
+        </section>
 
-                    @if (Model.OrderType == OrderType.StandardOrderVisit)
-                    {
-                        if (Model.RoomType == RoomType.StandardReadingRoom)
+        <section class="booking-summary">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="prompt-grey">
+                        <p>@(Model.OrderType == OrderType.StandardOrderVisit ? "Standard order" : "Bulk order") - @($"{Model.BookingDate:dddd dd MMMM}")</p>
+
+                        @if (Model.OrderType == OrderType.StandardOrderVisit)
                         {
-                            <p>Standard document reading room</p>
+                            if (Model.RoomType == RoomType.StandardReadingRoom)
+                            {
+                                <p>Standard document reading room</p>
+                            }
+                            else
+                            {
+                                <p>Map and large document reading room</p>
+                            }
                         }
-                        else
-                        {
-                            <p>Map and large document reading room</p>
-                        }
-                    }
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="reader-ticket-form">
             <div class="row">
-                <form>
-                    <fieldset>
-                        <legend class="sr-only">Enter reader ticket number</legend>
+                <div class="col-md-12">
+                    <form action="#" method="GET">
+                        <fieldset>
+                            <legend class="sr-only">Enter reader ticket number</legend>
 
-                        <div>
-                            <label for="reader-ticket-number">To reserve your space, enter your reader's ticket number</label>
-                        </div>
+                            <div>
+                                <label for="reader-ticket-number">To reserve your space, enter your reader's ticket number</label>
+                            </div>
 
-                        <input id="reader-ticket-number" name="reader-ticket-number" type="text" placeholder="Enter ticket number" />
+                            <input id="reader-ticket-number" name="reader-ticket-number" type="text" placeholder="Enter ticket number" />
 
-                        <button class="button" type="submit">Check ticket details</button>
-                    </fieldset>
-                </form>
-                <a href="/">How to register or renew your reader's ticket</a>
+                            <button class="button" type="submit">Check ticket details</button>
+                        </fieldset>
+                    </form>
+                    <a href="/">How to register or renew your reader's ticket</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="ticket-details">
+            <div class="row">
+                <div class="col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
+                    <div class="prompt-white">
+                        <p>Your reservation confirmation will be sent to</p>
+                        <p>g*******l@g***l.com</p>
+                        <a href="#">Find out how to change your details</a>
+                        <small>We haven’t displayed your full email address for privacy and security reasons</small>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section class="booking-options">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
                     <form action="@Url.Action("BookingConfirmation", "Booking", new { orderType = @Model.OrderType.ToStringURL() })">
                         <fieldset id="conditions">
                             <legend class="sr-only">Please accept the following conditions to continue with your order</legend>
@@ -85,11 +106,11 @@
                             </div>
                         </fieldset>
 
-                        <span class="col-md-6">
+                        <span class="col-md-6 col-sm-6">
                             <a class="button primary" href="@Url.Action("Availability", "Home", new { orderType = @Model.OrderType.ToStringURL() } )">Back</a>
                         </span>
 
-                        <span class="col-md-6">
+                        <span class="col-md-6 col-sm-6">
                             <button type="submit" class="button primary">Reserve your space</button>
                         </span>
                     </form>
