--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -9,14 +9,16 @@
 
     <section class="container">
 
-        <section>
-            <div class="container-heading-text">
-                <p>
-                    To reserve a place, you will need your reader's ticket number and to know how many documents you would like to see.
-                    You can then choose an available date to view documents in our reading rooms. You can book a maximum of two visits
-                    per month. See our Terms and Conditions for more details.
-                </p>
-                <a href="#">More information about how to book and what to expect ></a>
+        <section class="heading-text">
+            <div class="row">
+                <div class="col-md-12">
+                    <p>
+                        To reserve a place, you will need your reader's ticket number and to know how many documents you would like to see.
+                        You can then choose an available date to view documents in our reading rooms. You can book a maximum of two visits
+                        per month. See our Terms and Conditions for more details.
+                    </p>
+                    <a href="#">More information about how to book and what to expect ></a>
+                </div>
             </div>
         </section>
 
@@ -33,7 +35,7 @@
         <section>
             <div class="row">
                 <section class="order-option">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="card">
                             <div class="order-option-heading">
                                 <h2>Book a standard visit</h2>
@@ -53,7 +55,7 @@
                 </section>
 
                 <section class="order-option">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="card">
                             <div class="order-option-heading">
                                 <h2>Book a bulk order visit</h2>
